--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,21 +39,36 @@
         android:layout_margin="10dp"
         android:hint="Enter Course Description" />
 
+
+    <LinearLayout
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:weightSum="2">
+
+
     <!--button for adding new course-->
     <Button
         android:id="@+id/idBtnAddCourse"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
+        android:textAlignment="center"
         android:text="Add Student Detail"
-        android:textAllCaps="false" />
+        android:textAllCaps="false"
+        android:gravity="center_horizontal" />
     <!--new button for opening our student list activity-->
     <Button
         android:id="@+id/idBtnReadCourse"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:text="Read All Courses"
-        android:textAllCaps="false" />
+        android:textAlignment="center"
+        android:text="View Student Details"
+        android:textAllCaps="false"
+        android:gravity="center_horizontal" />
+    </LinearLayout>
 
 </LinearLayout>
