--- a/app/src/main/res/layout/student_item.xml
+++ b/app/src/main/res/layout/student_item.xml
@@ -6,28 +6,46 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:elevation="8dp"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="15dp">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:orientation="vertical">
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/qrPlaceHolder"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintVertical_bias="0.31"
+            app:srcCompat="@android:drawable/screen_background_dark_transparent" />
 
         <!--text view for our course name-->
+
         <TextView
             android:id="@+id/idTVCourseName"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="3dp"
+            android:padding="5dp"
+            android:layout_marginTop="10dp"
+            android:layout_toRightOf="@+id/qrPlaceHolder"
+            app:layout_constraintStart_toStartOf="@id/qrPlaceHolder"
             android:text="Course Name"
             android:textColor="@color/black" />
 
         <LinearLayout
+            android:id="@+id/linear"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            android:layout_toRightOf="@+id/qrPlaceHolder"
+            android:layout_below="@+id/idTVCourseName"
             android:weightSum="2">
+
 
             <!--text view for our course tracks-->
             <TextView
@@ -35,7 +53,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="3dp"
+                android:padding="5dp"
                 android:text="Course Tracks"
                 android:textColor="@color/black" />
 
@@ -46,7 +64,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:padding="3dp"
+                android:padding="5dp"
                 android:text="Duration"
                 android:textColor="@color/black" />
 
@@ -55,13 +73,15 @@
         <!--text view for our course description-->
         <TextView
             android:id="@+id/idTVCourseDescription"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:padding="3dp"
+            android:padding="5dp"
+            android:layout_below="@+id/linear"
+            android:layout_toRightOf="@+id/qrPlaceHolder"
             android:text="Description"
             android:textColor="@color/black" />
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </androidx.cardview.widget.CardView>
