--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:background="#FFFFFF"
     tools:context=".MainActivity">
 
-    <!--Edit text to enter course name-->
-    <EditText
-        android:id="@+id/idEdtCourseName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Enter Student Name" />
 
     <!--edit text to enter course duration-->
     <EditText
@@ -23,52 +16,77 @@
         android:layout_margin="10dp"
         android:hint="Enter RollNo" />
 
-    <!--edit text to display course tracks-->
-    <EditText
-        android:id="@+id/idEdtCourseTracks"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Enter Marks" />
-
-    <!--edit text for course description-->
-    <EditText
-        android:id="@+id/idEdtCourseDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:hint="Enter Course Description" />
+    <!--Edit text to enter course name-->
+        <EditText
+            android:id="@+id/idEdtCourseName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:hint="Enter Student Name" />
 
 
-    <LinearLayout
-        android:id="@+id/linear"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:weightSum="2">
+        <!--edit text to display course tracks-->
+        <EditText
+            android:id="@+id/idEdtCourseTracks"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:inputType="numberDecimal"
+            android:hint="Enter Marks" />
+
+        <!--edit text for course description-->
+        <EditText
+            android:id="@+id/idEdtCourseDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:hint="Enter Course Description" />
 
 
-    <!--button for adding new course-->
-    <Button
-        android:id="@+id/idBtnAddCourse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textAlignment="center"
-        android:text="Add Student Detail"
-        android:textAllCaps="false"
-        android:gravity="center_horizontal" />
-    <!--new button for opening our student list activity-->
-    <Button
-        android:id="@+id/idBtnReadCourse"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:textAlignment="center"
-        android:text="View Student Details"
-        android:textAllCaps="false"
-        android:gravity="center_horizontal" />
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:weightSum="2">
+
+            <!--button for adding new course-->
+            <ImageButton
+                android:id="@+id/idBtnAddCourse"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:rotation="-45"
+                android:layout_margin="15dp"
+                android:textAlignment="center"
+                android:text="Add"
+                android:src="@android:drawable/ic_delete"
+                android:background="@drawable/rounded_corner_add_btn"
+                android:textAllCaps="false"
+                android:gravity="center_horizontal" />
+            <!--new button for opening our student list activity-->
+            <Button
+                android:id="@+id/idBtnReadCourse"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:textAlignment="center"
+                android:visibility="gone"
+                android:text="View Student Details"
+                android:textAllCaps="false"
+                android:gravity="center_horizontal" />
+
+        </LinearLayout>
+
+        <include
+            layout="@layout/item_bottom_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            app:layout_constraintBottom_toBottomOf="parent" />
+
+
+
+
 
 </LinearLayout>
