--- a/app/src/main/res/layout/dialog_faceid.xml
+++ b/app/src/main/res/layout/dialog_faceid.xml
@@ -9,32 +9,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="end"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/close"
-            android:layout_width="3dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="29dp"
-            android:layout_marginRight="19dp"
-            android:layout_marginTop="19dp"
-            android:src="@drawable/close_new"
-            android:layout_alignParentRight="true" />
-
-
-    </RelativeLayout>
-
 
     <ImageView
         android:id="@+id/bitmapqr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="10dp"
+        android:paddingTop="5dp"
+        android:paddingHorizontal="50dp"
         android:gravity="center"
         android:layout_marginTop="19dp"
         android:layout_marginBottom="6dp" />
@@ -45,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="15dp"
         android:text="Student Details"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="20sp"
         android:gravity="center"/>
 
