--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,14 +6,15 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="white">#ffffff</color>
 
 
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#344955</color>
+    <color name="colorPrimaryDark">#F9AA33</color>
+    <color name="colorAccent">#be9c91</color>
 
     <color name="whiteTwo">#dfdfdf</color>
     <color name="gunmetalTwo">#454d5b</color>
+
 
 </resources>
